--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,6 @@ env_logger = "0.9.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 chrono = { version = "0.4.22", features = ["serde"] }
+
+# provide host system info
+sysinfo = "0.26.4"
